# ShoppingCart

./: CMakeLists.txt  Catalogue.docx  DiscountCoupons.docx  README.md  build.sh  main.cpp
include/: Cart.hpp  EnumTypes.h  Inventory.h  Item.hpp  Product.hpp  ProductTypes.h  Shell.hpp
src/: Cart.cpp  Inventory.cpp  Item.cpp  Product.cpp  Shell.cpp
